# UGRP_apply_NN_to_Robot

./: .gitignore  CMakeLists.txt  README.md  read.cpp
ebimu_setting/: ebimu.ino  ebimu_setting.ino
